--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-slider-swiper": "^2.0.6",
+    "swiper": "^11.2.2",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
