--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
@@ -18,6 +19,7 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-slider-swiper": "^2.0.6",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.2.2",
     "web-vitals": "^4.2.4",
     "yup": "^1.6.1"
